package com.sgrd.management.model.Enum;

public enum EmployeeTypeEnum {
    ADMINISTRADOR,
    ENCARGADO,
    SERENO,
    LIMPIEZA,
    AUXILIAR,
    MANTENIMIENTO
}
