package com.sgrd.management.model.Enum;

public enum GuestTypeEnum {
    CONSUMIDOR_FINAL,
    RESPONSABLE_INSCRIPTO,
    CUENTA_CORRIENTE,
    STIA,
    UTHGRA,
    ATE,
    VIALIDAD,
    CAMIONEROS,
    SEGURIDAD,
    OTRO
}
