package com.sgrd.management.model.Enum;

public enum RoomStateEnum {
    LIBRE,
    OCUPADA,
    RESERVADA,
    EN_MANTENIMIENTO
}
