package com.sgrd.management.model.Enum;

public enum RoomTypeEnum {
    SIMPLE,
    DOBLE,
    TRIPLE,
    CUADRUPLE,
    ESPECIAL
}
